# Machine-Learning-Library

./: README.md  Tester.ipynb  Tester.py  Tester_lin_reg.ipynb  Tester_log_reg.ipynb  pyproject.toml
.ipynb_checkpoints/: Tester-checkpoint.ipynb  Tester_log_reg-checkpoint.ipynb
DS/LinearRegression/: .~lock.swedish_insurance.csv#  .~lock.test.csv#
SL/LinearRegression/: Tester.ipynb  Tester.py  pyproject.toml
src/mlib/: LinearRegression.py  LogisticRegression.py  PolynomialRegression.py  sl.py
