[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mlib"
version = "0.0.4"
authors = [
  { name="Mohamed Toumi", email="hamatm662@gmail.com" },
]
description = "a reimplementation of ML package from scratch"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ZeroDay0utplay/Machine-Learning-Library"
"Bug Tracker" = "https://github.com/ZeroDay0utplay/Machine-Learning-Library/issues"
